# volt-be

./: README.md  db.sqlite3  manage.py  pyproject.toml  ruff.toml
activities/: models.py  serializers.py  tests.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_alter_activity_platform_and_more.py  0002_initial.py  0003_alter_activity_unique_together.py  0003_platformaccount_metadata.py
activities/services/: activity_service.py  metrics_service.py  normalization.py  sync_service.py
activities/services/test/: normalization_test.py  test_external_apis.py
common/email/: service.py
users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
volt/: asgi.py  settings.py  urls.py  wsgi.py
