[project]
name = "volt-be"
version = "0.1.0"
description = "Backend code for volt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "playwright>=1.60.0",
    "psycopg2>=2.9.11",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "pytest-mock>=3.14.0",
]
